; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nvdimm/extr_nvdimm_nfit.c_malloc_find_matches.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nvdimm/extr_nvdimm_nfit.c_malloc_find_matches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_NVDIMM = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32, i8***, i32*)* @malloc_find_matches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @malloc_find_matches(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8*** %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8***, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8*** %5, i8**** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @find_matches(i32* %16, i32 %17, i32 %18, i32 %19, i32 %20, i8** null, i32 0)
  store i32 %21, i32* %15, align 4
  %22 = load i32, i32* %15, align 4
  %23 = load i32*, i32** %14, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* %15, align 4
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %7
  %27 = load i8***, i8**** %13, align 8
  store i8** null, i8*** %27, align 8
  br label %44

28:                                               ; preds = %7
  %29 = load i32, i32* %15, align 4
  %30 = load i32, i32* @M_NVDIMM, align 4
  %31 = load i32, i32* @M_WAITOK, align 4
  %32 = call i8** @mallocarray(i32 %29, i32 8, i32 %30, i32 %31)
  %33 = load i8***, i8**** %13, align 8
  store i8** %32, i8*** %33, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %10, align 4
  %37 = load i32, i32* %11, align 4
  %38 = load i32, i32* %12, align 4
  %39 = load i8***, i8**** %13, align 8
  %40 = load i8**, i8*** %39, align 8
  %41 = load i32*, i32** %14, align 8
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @find_matches(i32* %34, i32 %35, i32 %36, i32 %37, i32 %38, i8** %40, i32 %42)
  br label %44

44:                                               ; preds = %28, %26
  ret void
}

declare dso_local i32 @find_matches(i32*, i32, i32, i32, i32, i8**, i32) #1

declare dso_local i8** @mallocarray(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
